# asset_migrator

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  extensions.txt
.github/workflows/: ci_sanity.yml  ci_windows.yml
asset_migrator/: Cargo.toml
asset_migrator/src/: main.rs  meta_file.rs
asset_migrator/src/meta_file/: collection.rs  meta_file.rs  meta_struct.rs
scripts/: bundle_ci.sh
src/: amgui_app.rs  dropwatch.rs  main.rs  meta_file.rs
src/meta_file/: collector.rs  meta_file.rs
